--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
         <div id="mic-pattern">
         <a class="jsbin-embed" href="http://jsbin.com/eHufOvE/10/embed?js,output">JS Bin</a>
         </div>
-        <h2>Stacked area chart: nightingale chart</h2>
+        <h2>Stacked area chart: nightingale chart (by <a href="https://github.com/timelyportfolio">timelyportfolio</a>)</h2>
         <div id="nightingale">
         <a class="jsbin-embed" href="http://jsbin.com/UtiDoDO/2/embed?js,output"></a>
         </div>
     </div>
     <br />
     <hr />
-    by Christophe Viau, GitHub: Biovisualize, Twitter: @d3visualization
+    by Christophe Viau | GitHub: <a href="https://github.com/biovisualize">Biovisualize</a> | Twitter: <a href="https://twitter.com/d3visualization">@d3visualization</a> | <a href="http://www.linkedin.com/in/christopheviau">Linkedin</a>
 </div>
 
 <script>
