--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="jasmine-2.0.0-rc3/jasmine-html.js"></script>
     <script type="text/javascript" src="jasmine-2.0.0-rc3/boot.js"></script>
     <script type='text/javascript' src="../lib/d3.js"></script>
+    <script type='text/javascript' src="jasmineHelpers.js"></script>
 
 
     <!-- include source files here... -->
