--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -23,9 +23,11 @@
     <script type='text/javascript' src="../src/dot_plot.js"></script>
     <script type='text/javascript' src="../src/line_plot.js"></script>
     <script type='text/javascript' src="../src/factory.js"></script>
+    <script type='text/javascript' src="../src/legend.js"></script>
 
     <!-- include spec files here... -->
     <script type="text/javascript" src="axisSpec.js"></script>
+    <script type="text/javascript" src="legendSpec.js"></script>
 
 </head>
 
