simple chart title

--- a/examples/examples.html
+++ b/examples/examples.html
@@ -63,6 +63,7 @@
         geometry: [linePlot1, linePlot2, linePlot3, linePlot4, linePlot5],
         data: [data1, data2, data3, data4, data5],
         legend: legend,
+        title: 'Microphone Patterns',
         height: 300, 
         width: 300, 
         angularTicksStep: 30,
