mic pattern example as a multi line preset

--- a/examples/examples.html
+++ b/examples/examples.html
@@ -26,58 +26,37 @@
 <script>
 (function(){
 
+
     // Mic patterns example
     ////////////////////////////////////////
 
-    var colors = ['peru', 'darkviolet', 'deepskyblue', 'orangered', 'green'];
+    var equation1 = function(theta){ return Math.abs(Math.cos(theta)); };
+    var equation2 = function(theta){ return Math.abs(0.5 + 0.5 * Math.cos(theta)); };
+    var equation3 = function(theta){ return Math.abs(0.25 + 0.75 * Math.cos(theta)); };
+    var equation4 = function(theta){ return Math.abs(0.7 + 0.3 * Math.cos(theta)); };
+    var equation5 = function(theta){ return Math.abs(0.37 + 0.63 * Math.cos(theta)); };
+    var color = ['peru', 'darkviolet', 'deepskyblue', 'orangered', 'green'];
+    var geometryName = ['Figure 8', 'Cardioid', 'Hypercardioid', 'Subcardioid', 'Supercardioid'];
 
-    var linePlot1 = micropolar.LinePlot().config({stroke: colors[0]});
-    var linePlot2 = micropolar.LinePlot().config({stroke: colors[1]});
-    var linePlot3 = micropolar.LinePlot().config({stroke: colors[2]});
-    var linePlot4 = micropolar.LinePlot().config({stroke: colors[3]});
-    var linePlot5 = micropolar.LinePlot().config({stroke: colors[4]});
-
-    function generateData(equation){
-        var step = 6;
-        var data = d3.range(0, 360 + step, step).map(function(deg, index){
-            var theta = deg * Math.PI / 180;
-            var radius = equation(theta);
-            return [deg, radius];
-        });
-        return data;
-    }
-
-    var data1 = generateData(function(theta){ return Math.abs(Math.cos(theta)); });
-    var data2 = generateData(function(theta){ return Math.abs(0.5 + 0.5 * Math.cos(theta)); });
-    var data3 = generateData(function(theta){ return Math.abs(0.25 + 0.75 * Math.cos(theta)); });
-    var data4 = generateData(function(theta){ return Math.abs(0.7 + 0.3 * Math.cos(theta)); });
-    var data5 = generateData(function(theta){ return Math.abs(0.37 + 0.63 * Math.cos(theta)); });
-
-    var legend = micropolar.legend()
-        .config({
-            data: ['Figure 8', 'Cardioid', 'Hypercardioid', 'Subcardioid', 'Supercardioid'],
-            colors: colors
-        });
-
-    var config = {
-        geometry: [linePlot1, linePlot2, linePlot3, linePlot4, linePlot5],
-        data: [data1, data2, data3, data4, data5],
-        legend: legend,
+    µ.preset.multiLinePlot({
+        data: [equation1, equation2, equation3, equation4, equation5],
+        color: color,
+        geometryName: geometryName,
+        geometry: 'LinePlot',
         title: 'Microphone Patterns',
-        height: 300, 
-        width: 300, 
-        angularTicksStep: 30,
-        angularTicksSuffix: 'º',
-        minorTicks: 1,
-        flip: true,
-        originTheta: -90,
-        radialAxisTheta: -90,
-        radialTicksSuffix: 'dB',
-        containerSelector: '#container1'
-    };
+        containerSelector: '#container1',
+        radialTicksSuffix: 'dB'
+    });
 
-    var polarAxis = micropolar.Axis().config(config);
-    polarAxis();
+//    µ.preset.multiLinePlot({
+////        data: [[[1, 10], [2, 20], [3, 30], [4, 40]]],
+//        data: [[1, 10], [2, 20], [3, 30], [4, 40]],
+//        color: 'red',
+//        geometry: 'LinePlot',
+//        title: 'Microphone Patterns',
+//        containerSelector: '#container1',
+//        radialTicksSuffix: 'dB'
+//    });
 
 
     // Nightingale example
@@ -119,10 +98,10 @@
             [ "Dec 1854", 48, "Other"],
             [ "Jan 1855", 120, "Other"],
             [ "Feb 1855", 140.1, "Other"],
-            [ "Mar 1855", 68.6, "Other"] 
+            [ "Mar 1855", 68.6, "Other"]
         ];
 
-    var polarPlot = micropolar.StackedAreaChart();
+    var polarPlot = µ.StackedAreaChart();
 
     var config = {
         data: data.map(function(d, i){ return [i%12, d[1], d[2]]; }),
@@ -137,7 +116,7 @@
         margin: 35
     };
 
-    var polarAxis = micropolar.Axis().config(config);
+    var polarAxis = µ.Axis().config(config);
     polarAxis();
 
 })();
