--- a/examples/legend.html
+++ b/examples/legend.html
@@ -5,6 +5,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title></title> 
     <script type='text/javascript' src="../lib/d3.js"></script>
+    <script type='text/javascript' src="../src/axis.js"></script>
     <script type='text/javascript' src="../src/util.js"></script>
     <script type='text/javascript' src="../src/legend.js"></script>
     <link rel="stylesheet" type="text/css" href="./style.css">
