update jsbin examples

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
     <div class="advanced-example-container">
         <h2>Multi line plot: microphone patterns</h2>
         <div id="mic-pattern">
-        <a class="jsbin-embed" href="http://jsbin.com/eHufOvE/10/embed?js,output">JS Bin</a>
+        <a class="jsbin-embed" href="http://jsbin.com/eHufOvE/15/embed?output">JS Bin</a>
         </div>
         <h2>Stacked area chart: nightingale chart (by <a href="https://github.com/timelyportfolio">timelyportfolio</a>)</h2>
         <div id="nightingale">
-        <a class="jsbin-embed" href="http://jsbin.com/UtiDoDO/2/embed?js,output"></a>
+        <a class="jsbin-embed" href="http://jsbin.com/UtiDoDO/4/embed?output"></a>
         </div>
     </div>
     <br />
