plotly adapter; line plot tweaking; multiline range

--- a/examples/examples.html
+++ b/examples/examples.html
@@ -45,7 +45,8 @@
         geometry: 'LinePlot',
         title: 'Microphone Patterns',
         containerSelector: '#container1',
-        radialTicksSuffix: 'dB'
+        radialTicksSuffix: 'dB',
+        angularTicksSuffix: 'º'
     });
 
 //    µ.preset.multiLinePlot({
