--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -30,6 +30,12 @@
     <script type="text/javascript" src="axisSpec.js"></script>
     <script type="text/javascript" src="legendSpec.js"></script>
     <script type="text/javascript" src="adapterSpec.js"></script>
+    <script type="text/javascript" src="linePresetSpec.js"></script>
+    <style>
+        svg{
+            border: 1px solid silver;
+        }
+    </style>
 
 </head>
 
