micro polar v1.2: simpler data and config format, no more presets, geometry handled by axis; plotly adapter; bar/area/triangles under same geometry; defaultConfig; deepExtend;

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -30,7 +30,7 @@
     <script type="text/javascript" src="axisSpec.js"></script>
     <script type="text/javascript" src="legendSpec.js"></script>
     <script type="text/javascript" src="adapterSpec.js"></script>
-    <script type="text/javascript" src="linePresetSpec.js"></script>
+    <script type="text/javascript" src="geometrySpec.js"></script>
     <style>
         svg{
             border: 1px solid silver;
