--- a/examples/examples.html
+++ b/examples/examples.html
@@ -26,99 +26,148 @@
 <script>
 (function(){
 
-
     // Mic patterns example
     ////////////////////////////////////////
 
-    var equation1 = function(theta){ return Math.abs(Math.cos(theta)); };
-    var equation2 = function(theta){ return Math.abs(0.5 + 0.5 * Math.cos(theta)); };
-    var equation3 = function(theta){ return Math.abs(0.25 + 0.75 * Math.cos(theta)); };
-    var equation4 = function(theta){ return Math.abs(0.7 + 0.3 * Math.cos(theta)); };
-    var equation5 = function(theta){ return Math.abs(0.37 + 0.63 * Math.cos(theta)); };
-    var color = ['peru', 'darkviolet', 'deepskyblue', 'orangered', 'green'];
-    var geometryName = ['Figure 8', 'Cardioid', 'Hypercardioid', 'Subcardioid', 'Supercardioid'];
+//    var data = [
+//        µ.util.dataFromEquation(function(theta){ return Math.abs(Math.cos(theta)); }, 6, 'Cardioid'),
+//        µ.util.dataFromEquation(function(theta){ return Math.abs(0.5 + 0.5 * Math.cos(theta)); }, 6, 'Figure8'),
+//        µ.util.dataFromEquation(function(theta){ return Math.abs(0.25 + 0.75 * Math.cos(theta)); }, 6, 'Hypercardioid'),
+//        µ.util.dataFromEquation(function(theta){ return Math.abs(0.7 + 0.3 * Math.cos(theta)); }, 6, 'Subcardioid'),
+//        µ.util.dataFromEquation(function(theta){ return Math.abs(0.37 + 0.63 * Math.cos(theta)); }, 6, 'Supercardioid')
+//    ];
+//    var geometryConfig = [
+//        {geometry: 'LinePlot', color: 'orange'},
+//        {geometry: 'LinePlot', color: 'skyblue'},
+//        {geometry: 'LinePlot', color: 'red'},
+//        {geometry: 'LinePlot', color: 'limegreen'},
+//        {geometry: 'LinePlot', color: 'violet'}
+//    ];
+//    var axisConfig = {
+//        height: 500,
+//        width: 500,
+//        margin: {top: 60, right: 120, bottom: 20, left: 20},
+//        container: '#container1',
+//        originTheta: -90,
+//        title: 'Microphone Patterns'
+//    };
+//    var legendConfig = {
+//        showLegend: true
+//    };
+//    var config = {data: data, axisConfig: axisConfig, geometryConfig: geometryConfig, legendConfig: legendConfig};
+//    var polarAxis = µ.Axis().config(config)();
 
-    µ.preset.multiLinePlot({
-        data: [equation1, equation2, equation3, equation4, equation5],
-        color: color,
-        geometryName: geometryName,
-        geometry: 'LinePlot',
-        title: 'Microphone Patterns',
-        containerSelector: '#container1',
-        radialTicksSuffix: 'dB',
-        angularTicksSuffix: 'º'
-    });
 
-//    µ.preset.multiLinePlot({
-////        data: [[[1, 10], [2, 20], [3, 30], [4, 40]]],
-//        data: [[1, 10], [2, 20], [3, 30], [4, 40]],
-//        color: 'red',
-//        geometry: 'LinePlot',
-//        title: 'Microphone Patterns',
-//        containerSelector: '#container1',
-//        radialTicksSuffix: 'dB'
-//    });
+    var data = [
+//        {name: 'Data1', x: [[0, 1, 2, 3], [4, 5, 6, 7]], y: [[10, 20, 30, 40], [50, 60, 70, 80]]},
+//        {name: 'Data1', x: [0, 1, 2, 3, 4], y: [10, 20, 30, 40, 50]},
+//        {name: 'Data8', x: [0, 1, 2, 3, 4], y: [10, 20, 30, 40, 50]},
+//        {name: 'Data3', x: [0, 1, 2, 3], y: [10, 20, 30, 40]},
+        {name: 'Data5', x: [0, 1, 2, 3], y: [10, 20, 30, 40]},
+//        {name: 'Data5', x: [1, 2, 3, 4], y: [10, 20, 30, 40]},
+//        {name: 'Data5', x: [0, 1, 2, 3, 4, 5, 6], y: [10, 20, 30, 40, 50, 60, 70]},
+//        {name: 'Data5', x: [0, 1, 2, 3, 4, 5, 6], y: [10, 20, 30, 40, 50, 60, 70]},
+//        {name: 'Data4', x: [0, 1, 2, 3], y: [10, 20, 30, 40]}
+        {name: 'Line4', x: [3, 4, 5, 6], y: [50, 60, 70, 80]},
+        {name: 'Line2', x: [4, 5, 6, 7], y: [50, 60, 70, 80]},
+//        {name: 'Line2', x: [5, 6, 7, 8], y: [50, 60, 70, 80]},
+//        {name: 'Line3', x: [9, 10, 11, 12], y: [50, 60, 70, 80]}
+    ];
 
+    var geometryConfig = [
+//        {geometry: 'LinePlot', color: 'violet', opacity: 0.8, visibleInLegend: true, dash: 'dash'},
+//        {geometry: 'LinePlot', visibleInLegend: true},
+//        {geometry: 'LinePlot'}
+//        {geometry: 'DotPlot'},
+        {geometry: 'DotPlot'},
+        {geometry: 'StackedAreaChart'},
+        {geometry: 'LinePlot'},
+//        {geometry: 'BarChart'},
+//        {geometry: 'BarChart'},
+//        {geometry: 'BarChart'}
+    ];
+    var axisConfig = {
+        height: 500,
+        width: 500,
+        margin: {top: 60, right: 120, bottom: 20, left: 20},
+        container: '#container1',
+        title: 'Title',
+        flip: true,
+        radialDomain: [-50, 80],
+        radialAxisTheta: 0,
+//        angularTicksCount: 3,
+        minorTicks: 2,
+        originTheta: 0,
+        needsEndSpacing: true
+    };
+    var legendConfig = {
+        showLegend: true,
+        reverseOrder: true
+    };
+    var config = {data: data, axisConfig: axisConfig, geometryConfig: geometryConfig, legendConfig: legendConfig};
+    var polarAxis = µ.Axis().config(config)();
+
+//    polarAxis.config({axisConfig: {width: 400}})();
 
     // Nightingale example
     ////////////////////////////////////////
 
-    var data = [
-            [ "Apr 1854", 1.4, "Disease"],
-            [ "May 1854", 6.2, "Disease"],
-            [ "Jun 1854", 4.7, "Disease"],
-            [ "Jul 1854", 150, "Disease"],
-            [ "Aug 1854", 328.5, "Disease"],
-            [ "Sep 1854", 312.2, "Disease"],
-            [ "Oct 1854", 197, "Disease"],
-            [ "Nov 1854", 340.6, "Disease"],
-            [ "Dec 1854", 631.5, "Disease"],
-            [ "Jan 1855", 1022.8, "Disease"],
-            [ "Feb 1855", 822.8, "Disease"],
-            [ "Mar 1855", 480.3, "Disease"],
-            [ "Apr 1854", 0, "Wounds"],
-            [ "May 1854", 0, "Wounds"],
-            [ "Jun 1854", 0, "Wounds"],
-            [ "Jul 1854", 0, "Wounds"],
-            [ "Aug 1854", 0.4, "Wounds"],
-            [ "Sep 1854", 32.1, "Wounds"],
-            [ "Oct 1854", 51.7, "Wounds"],
-            [ "Nov 1854", 115.8, "Wounds"],
-            [ "Dec 1854", 41.7, "Wounds"],
-            [ "Jan 1855", 30.7, "Wounds"],
-            [ "Feb 1855", 16.3, "Wounds"],
-            [ "Mar 1855", 12.8, "Wounds"],
-            [ "Apr 1854", 7, "Other"],
-            [ "May 1854", 4.6, "Other"],
-            [ "Jun 1854", 2.5, "Other"],
-            [ "Jul 1854", 9.6, "Other"],
-            [ "Aug 1854", 11.9, "Other"],
-            [ "Sep 1854", 27.7, "Other"],
-            [ "Oct 1854", 50.1, "Other"],
-            [ "Nov 1854", 42.8, "Other"],
-            [ "Dec 1854", 48, "Other"],
-            [ "Jan 1855", 120, "Other"],
-            [ "Feb 1855", 140.1, "Other"],
-            [ "Mar 1855", 68.6, "Other"]
-        ];
-
-    var polarPlot = µ.StackedAreaChart();
-
-    var config = {
-        data: data.map(function(d, i){ return [i%12, d[1], d[2]]; }),
-        geometry: polarPlot,
-        containerSelector: '#container2',
-        width: 300,
-        height: 300,
-        flip: true,
-        originTheta: -90,
-        radialAxisTheta: -30,
-        radialDomain: [0, 1174],
-        margin: 35
-    };
-
-    var polarAxis = µ.Axis().config(config);
-    polarAxis();
+//    var data = [
+//            [ "Apr 1854", 1.4, "Disease"],
+//            [ "May 1854", 6.2, "Disease"],
+//            [ "Jun 1854", 4.7, "Disease"],
+//            [ "Jul 1854", 150, "Disease"],
+//            [ "Aug 1854", 328.5, "Disease"],
+//            [ "Sep 1854", 312.2, "Disease"],
+//            [ "Oct 1854", 197, "Disease"],
+//            [ "Nov 1854", 340.6, "Disease"],
+//            [ "Dec 1854", 631.5, "Disease"],
+//            [ "Jan 1855", 1022.8, "Disease"],
+//            [ "Feb 1855", 822.8, "Disease"],
+//            [ "Mar 1855", 480.3, "Disease"],
+//            [ "Apr 1854", 0, "Wounds"],
+//            [ "May 1854", 0, "Wounds"],
+//            [ "Jun 1854", 0, "Wounds"],
+//            [ "Jul 1854", 0, "Wounds"],
+//            [ "Aug 1854", 0.4, "Wounds"],
+//            [ "Sep 1854", 32.1, "Wounds"],
+//            [ "Oct 1854", 51.7, "Wounds"],
+//            [ "Nov 1854", 115.8, "Wounds"],
+//            [ "Dec 1854", 41.7, "Wounds"],
+//            [ "Jan 1855", 30.7, "Wounds"],
+//            [ "Feb 1855", 16.3, "Wounds"],
+//            [ "Mar 1855", 12.8, "Wounds"],
+//            [ "Apr 1854", 7, "Other"],
+//            [ "May 1854", 4.6, "Other"],
+//            [ "Jun 1854", 2.5, "Other"],
+//            [ "Jul 1854", 9.6, "Other"],
+//            [ "Aug 1854", 11.9, "Other"],
+//            [ "Sep 1854", 27.7, "Other"],
+//            [ "Oct 1854", 50.1, "Other"],
+//            [ "Nov 1854", 42.8, "Other"],
+//            [ "Dec 1854", 48, "Other"],
+//            [ "Jan 1855", 120, "Other"],
+//            [ "Feb 1855", 140.1, "Other"],
+//            [ "Mar 1855", 68.6, "Other"]
+//        ];
+//
+//    var polarPlot = µ.StackedAreaChart();
+//
+//    var config = {
+//        data: data.map(function(d, i){ return [i%12, d[1], d[2]]; }),
+//        geometry: polarPlot,
+//        containerSelector: '#container2',
+//        width: 300,
+//        height: 300,
+//        flip: true,
+//        originTheta: -90,
+//        radialAxisTheta: -30,
+//        radialDomain: [0, 1174],
+//        margin: 35
+//    };
+//
+//    var polarAxis = µ.Axis().config(config);
+//    polarAxis();
 
 })();
 
