--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -17,12 +17,10 @@
     <script type="text/javascript" src="../src/axis.js"></script>
     <script type='text/javascript' src="../src/util.js"></script>
     <script type='text/javascript' src="../src/bar_chart.js"></script>
-    <script type='text/javascript' src="../src/clock.js"></script>
     <script type='text/javascript' src="../src/area_chart.js"></script>
-    <script type='text/javascript' src="../src/stacked_area_chart.js"></script>
+    <script type='text/javascript' src="../src/poly_chart.js"></script>
     <script type='text/javascript' src="../src/dot_plot.js"></script>
     <script type='text/javascript' src="../src/line_plot.js"></script>
-    <script type='text/javascript' src="../src/factory.js"></script>
     <script type='text/javascript' src="../src/legend.js"></script>
     <script type='text/javascript' src="../src/adapter.js"></script>
 
